fixed nav on ios

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,13 @@ body {
 	max-width: 1300px;
 }
 
+.wrapper-header {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1300px;
+	margin-top: 10em;
+}
+
 .wrapper-extended {
 	margin: 0 auto;
 	width: 100%;
@@ -1365,9 +1372,13 @@ body {
 		display: block;
 	}
 
+	// .wrapper-nav {
+	// 	position: sticky;
+	// 	position: -webkit-sticky;
+	// }
+
 	.wrapper-nav {
-		position: sticky;
-		position: -webkit-sticky;
+		position: fixed;
 	}
 
 	.faq {
